Se creó con Colab

--- a/01_Introduccion_a_Python/03_Estructuras_de_datos_parte2.ipynb
+++ b/01_Introduccion_a_Python/03_Estructuras_de_datos_parte2.ipynb
@@ -370,10 +370,10 @@
       ],
       "metadata": {
         "id": "TK57Y4GUvQ3Z",
-        "outputId": "7000f3ff-c005-48ab-c722-4b3b83e99690",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7000f3ff-c005-48ab-c722-4b3b83e99690"
       },
       "execution_count": 10,
       "outputs": [
@@ -394,10 +394,10 @@
       ],
       "metadata": {
         "id": "D0MpaT6xvSH6",
-        "outputId": "bdd48210-6257-454f-9e5d-955cfdf76a40",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bdd48210-6257-454f-9e5d-955cfdf76a40"
       },
       "execution_count": 11,
       "outputs": [
@@ -419,10 +419,10 @@
       ],
       "metadata": {
         "id": "02wHfdwMvUB_",
-        "outputId": "8e385834-1efb-4c23-9493-6d49e1528961",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8e385834-1efb-4c23-9493-6d49e1528961"
       },
       "execution_count": 12,
       "outputs": [
@@ -461,10 +461,10 @@
       ],
       "metadata": {
         "id": "FZytH_LBvZrP",
-        "outputId": "c5de9c40-5b3a-46dc-b3cb-4a56ce7a9106",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c5de9c40-5b3a-46dc-b3cb-4a56ce7a9106"
       },
       "execution_count": 32,
       "outputs": [
@@ -488,10 +488,10 @@
       ],
       "metadata": {
         "id": "n2yT2V3tvbEE",
-        "outputId": "d7041b18-a36a-491d-87fb-6f131b6ffa7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d7041b18-a36a-491d-87fb-6f131b6ffa7b"
       },
       "execution_count": 33,
       "outputs": [
@@ -514,10 +514,10 @@
       ],
       "metadata": {
         "id": "RS-Cqk3rvb7k",
-        "outputId": "e4db8d80-94a1-4867-9367-920acd7571eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4db8d80-94a1-4867-9367-920acd7571eb"
       },
       "execution_count": 34,
       "outputs": [
@@ -568,10 +568,10 @@
       ],
       "metadata": {
         "id": "7RMRCaRPvh1s",
-        "outputId": "dc20a15c-7fad-4ee5-c52a-a3251141d9f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dc20a15c-7fad-4ee5-c52a-a3251141d9f6"
       },
       "execution_count": 35,
       "outputs": [
@@ -596,6 +596,34 @@
             " [ 0 14 14 18]\n",
             " [ 8  8 10 14]]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.random.random((3,3))"
+      ],
+      "metadata": {
+        "id": "IE5UR2gRo9g0",
+        "outputId": "66bd2d69-feb1-4583-de1d-9015629db8fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.01345027, 0.32824857, 0.01566554],\n",
+              "       [0.33098327, 0.31165803, 0.83749481],\n",
+              "       [0.45719963, 0.18514882, 0.05809867]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     },
